Fix block page and address page display data and styles

--- a/frontend/components/addressheader/AddressHeader.module.scss
+++ b/frontend/components/addressheader/AddressHeader.module.scss
@@ -6,12 +6,11 @@
   > div {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
     padding: var(--space-xxxl) 0;
     margin: auto;
-  }
 
-  > div > div:first-child {
     h3 {
       margin-bottom: var(--space-xs);
       @media screen and (max-width: 768px) {
@@ -21,46 +20,23 @@
 
     div {
       display: flex;
-      justify-content: center;
       align-items: center;
-      @media screen and (max-width: 768px) {
-        justify-content: flex-start;
-      }
+      max-width: 100%;
     }
 
     span {
-      width: 100%;
       color: var(--blue-dark);
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
       margin: 0;
-      @media screen and (max-width: 768px) {
-        max-width: 40vw;
-      }
     }
-  }
-
-  h4 {
-    color: var(--blue-dark);
-    text-align: right;
-    text-transform: uppercase;
-    margin-bottom: var(--space-xs);
   }
 }
 
 .address-button {
   min-width: auto !important;
   margin-left: var(--space-xxs) !important;
-}
-
-.balance {
-  font-size: var(--font-size-l);
-
-  span {
-    display: inline-flex;
-    margin-left: var(--space-xxs);
-  }
 }
 
 @media screen and (max-width: 600px) {
