--- a/frontend/styles/styles.scss
+++ b/frontend/styles/styles.scss
@@ -72,6 +72,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-weight: 500;
   margin: 0;
 }
 
@@ -251,4 +252,8 @@ code {
   @media screen and (max-width: 600px) {
     max-width: 95vw;
   }
+}
+
+.ReactTable .rt-thead .rt-th {
+  text-align: left;
 }
