--- a/frontend/components/mainheader/MainHeader.module.scss
+++ b/frontend/components/mainheader/MainHeader.module.scss
@@ -3,7 +3,6 @@
   top: 0;
   width: 100%;
   background-color: #fefefe;
-  padding: var(--space-xs) 0;
   box-shadow: 0 2px 10px rgb(151, 164, 175, 0.1);
   z-index: 1000;
 
@@ -28,7 +27,6 @@
 .headerLeft {
   display: flex;
   justify-content: center;
-  align-items: center;
   @media screen and (max-width: 768px) {
     width: 100%;
     justify-content: space-between;
@@ -41,6 +39,7 @@
   font-size: 24px;
   font-weight: 600;
   color: var(--blue-dark);
+  padding: var(--space-xs) 0;
   margin-top: -4px;
 
   svg {
@@ -59,13 +58,17 @@
   margin-left: var(--space-xl);
 
   ul {
+    display: flex;
+    height: 100%;
     list-style-type: none;
     padding-inline-start: 0;
     margin: 0;
   }
 
   li {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    height: 100%;
     margin: 0px 5px;
   }
 
@@ -74,6 +77,11 @@
     font-size: 16px;
     font-weight: 500;
     padding: 10px 10px;
+    &.active {
+      color: var(--blue-dark);
+      border-bottom: 2px solid;
+      margin-bottom: -2px;
+    }
   }
 }
 
