--- a/frontend/components/table/TransactionTable.module.scss
+++ b/frontend/components/table/TransactionTable.module.scss
@@ -1,10 +1,3 @@
-.mui-table {
-  th,
-  td {
-    padding: var(--space-s);
-  }
-}
-
 .transaction-table {
   display: flex;
   flex-direction: column;
@@ -24,28 +17,69 @@
 
 .transaction-subrow {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
-.time {
-  flex: 0 0 auto;
-  margin-left: var(--space-l);
+.tx-type-label-wrapper {
+  width: 5rem;
+}
+
+.tx-type-label {
+  line-height: 1;
+  font-size: var(--font-size-xxs);
+  padding: var(--space-xxxxs) var(--space-xxs);
+  background: var(--blue-lightest);
+  border: 1px solid var(--blue-lighter-2);
 }
 
 .transaction-id {
+  max-width: 20rem;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  @media screen and (max-width: 768px) {
+    max-width: 14rem;
+  }
+}
+
+.time {
+  flex: 1 0 4rem;
+  text-align: right;
+  white-space: nowrap;
+  margin-left: var(--space-l);
 }
 
 .relevant-accounts {
   display: flex;
-  flex-direction: column;
+  gap: var(--space-m);
+
+  span {
+    width: 10rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    flex-wrap: wrap;
+    gap: var(--space-xxs);
+
+    span {
+      width: 9rem;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+  }
 }
 
 .transaction-info {
   display: flex;
-  flex-direction: column;
+  align-items: flex-end;
+  flex: 1 1 auto;
   text-align: right;
+  gap: var(--space-s);
+
+  span {
+    flex: 1 1 auto;
+    text-align: right;
+    white-space: nowrap;
+  }
 }
