--- a/frontend/pages/Home.module.scss
+++ b/frontend/pages/Home.module.scss
@@ -11,7 +11,7 @@
 
 .block-table {
   display: inline-block;
-  flex: 0 0 49%;
+  flex: 0 0 calc(50% - var(--space-xs));
   padding-top: 20px;
   vertical-align: top;
   text-align: left;
