--- a/frontend/components/headersearch/HeaderSearch.module.scss
+++ b/frontend/components/headersearch/HeaderSearch.module.scss
@@ -35,3 +35,43 @@
     }
   }
 }
+
+.loading-icon {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.loading-icon span {
+  box-sizing: border-box;
+  content: "";
+  position: absolute;
+  width: 1.2rem;
+  height: 1.2rem;
+  top: 0;
+  left: 0;
+  border: 0.15rem solid var(--blue-lightest);
+  border-radius: 50%;
+  border-top: 0.15rem solid transparent;
+  -webkit-animation: spin 1.5s linear infinite; /* Safari */
+  animation: spin 1.5s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
