--- a/frontend/pages/block/Block.module.scss
+++ b/frontend/pages/block/Block.module.scss
@@ -1,7 +1,8 @@
 .block-table {
-  border-radius: 8px;
+  font-size: var(--font-size-s);
   background-color: #fff;
   border: 1px solid var(--grey-lighter);
+  border-radius: 8px;
   margin-bottom: var(--space-xxxl);
   overflow: hidden;
 
@@ -81,9 +82,9 @@
   border-bottom: 1px solid rgb(231, 234, 243);
   &:first-child {
     padding-left: 15px;
-    font-weight: 500;
     min-width: 220px;
     width: 220px;
+    font-weight: 500;
     @media screen and (max-width: 768px) {
       width: 100%;
     }
@@ -123,4 +124,18 @@
   @media screen and (max-width: 768px) {
     flex-direction: column;
   }
+}
+
+.notes,
+.notes-row {
+  font-weight: 300;
+  font-family: monospace;
+}
+
+.table-header {
+  margin-bottom: 0;
+}
+
+.table-header ~ .table-wrapper {
+  margin-top: var(--space-s);
 }
