--- a/frontend/components/mainheader/MainHeader.module.scss
+++ b/frontend/components/mainheader/MainHeader.module.scss
@@ -5,6 +5,9 @@
   background-color: #fefefe;
   box-shadow: 0 2px 10px rgb(151, 164, 175, 0.1);
   z-index: 1000;
+  @media screen and (max-width: 768px) {
+    padding: 0 0 var(--space-xs);
+  }
 
   > div {
     display: flex;
@@ -70,6 +73,9 @@
     align-items: center;
     height: 100%;
     margin: 0px 5px;
+    @media screen and (max-width: 768px) {
+      margin: 0 0 0 var(--space-l);
+    }
   }
 
   a {
@@ -82,6 +88,9 @@
       border-bottom: 2px solid;
       margin-bottom: -2px;
     }
+    @media screen and (max-width: 768px) {
+      padding: 0;
+    }
   }
 }
 
@@ -92,13 +101,4 @@
 
 .shown {
   display: inline-block !important;
-}
-
-@media screen and (max-width: 950px) {
-  .menu > nav {
-    display: none;
-  }
-  .hamburger {
-    display: inline-block;
-  }
 }
