--- a/frontend/components/table/BlockTable.module.scss
+++ b/frontend/components/table/BlockTable.module.scss
@@ -71,6 +71,7 @@
 
   @media screen and (max-width: 768px) {
     flex-wrap: wrap;
+    width: 100%;
     margin-left: 0;
     span {
       width: 30%;
