--- a/frontend/styles/styles.scss
+++ b/frontend/styles/styles.scss
@@ -77,9 +77,16 @@ body {
   }
 }
 
+.mobile-only {
+  display: none;
+}
+
 @media screen and (max-width: 600px) {
   .hide-mobile {
     display: none;
+  }
+  .mobile-only {
+    display: block;
   }
 }
 
