Show program base64 if not locally run

--- a/frontend/pages/block/Block.module.scss
+++ b/frontend/pages/block/Block.module.scss
@@ -4,6 +4,7 @@
   border: 1px solid var(--grey-lighter);
   border-radius: 8px;
   margin-bottom: var(--space-xxxl);
+  word-break: break-all;
   overflow: hidden;
 
   div {
