--- a/frontend/pages/block/Block.module.scss
+++ b/frontend/pages/block/Block.module.scss
@@ -50,18 +50,6 @@
   margin: 0 0 var(--space-s);
 }
 
-.block-table table > thead {
-  tr {
-    background-color: #f8fafd;
-    font-size: var(--font-size-xs);
-    text-transform: uppercase;
-    color: var(--blue-dark);
-  }
-  @media screen and (max-width: 768px) {
-    display: none;
-  }
-}
-
 .block-table > table > tbody > tr {
   @media screen and (max-width: 768px) {
     line-height: 1.3;
@@ -76,9 +64,12 @@
   &:first-child {
     min-width: 240px;
     width: 240px;
+    color: var(--blue-dark);
     font-weight: 500;
+    background-color: #f8fafd;
     @media screen and (max-width: 768px) {
       width: 100%;
+      background-color: transparent;
     }
   }
 
