--- a/frontend/styles/styles.scss
+++ b/frontend/styles/styles.scss
@@ -256,3 +256,12 @@ code {
   display: flex;
   flex-direction: column;
 }
+
+.center-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
